[package]
name = "dishonored_2_trainer"
version = "0.1.1"
edition = "2021"

[lib]
name = "d3d11"
crate-type = ["cdylib"]

[dependencies]
vcheat = "=0.6.4"
minhook_raw = "=0.3.0"
hudhook-mini = { version = "=0.6.5", default-features = false, features = [
    "dx11",
] }

[build-dependencies]
forward-dll-mini = "=0.1.16"
