[package]
name = "dishonored_2_trainer"
version = "0.2.0"
edition = "2021"
authors = ["sylvavv"]
license = "MIT"

[lib]
name = "dinput8"
crate-type = ["cdylib"]

[dependencies]
minhook_raw = "0.3.0"
vcheat = "0.6.5"
hudhook = { version = "0.7.0", default-features = false, features = ["dx11"] }

[build-dependencies]
forward-dll-mini = "0.1.16"
